--- a/index.html
+++ b/index.html
@@ -3,10 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="module" src="scripts/app.js"></script>
+    <script type="module" src="scripts/screenController.js"></script>
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Tic-Tac-Toe!</h1>
+    </header>
+    <main>
+        <h2 class="current-player-header"></h2>
+        <div class="main-content-container">
+        </div>
+        <div class="game-options">
+            <div class="buttons">
+                <button>Start game</button>
+                <button>Reset game</button>
+            </div>
+            <div class="score">
+                <span>Player 1: </span>
+                <span>Player 2: </span>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
