--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </header>
     <main>
         <h2 class="current-player-header"></h2>
+        <h3 class="current-round-header"></h3>
         <div class="main-content-container">
         </div>
         <div class="game-options">
